feat(hr-feedback): redesign 360 question bank, rules, and dynamic preview workflow
- add reusable 360 feedback question bank UI with searchable/filterable table
- add create/edit drawer for questions with response type, scoring behavior, and optional weight handling
- support flexible competency input instead of fixed hardcoded-only selection
- simplify question statuses to Active and Inactive for HR workflow
- add backend-side question code generation and scoring behavior support
- enforce rating-only questions as score-contributing items
- treat written-answer and yes/no questions as non-scored or HR review items
- add question rule management UI with level range, evaluator role, section, and advanced targeting
- remove Project Stakeholder from question rule and dynamic preview scope
- support multi-role rule creation while keeping rule edit behavior controlled
- add rule activation/deactivation handling and duplicate/conflict validation
- split legacy all-role rules into role-specific rules
- add dynamic preview as a rule-testing tool for level, role, department, and position combinations
- add preview diagnostics for total questions, scored questions, non-scored questions, HR review items, sections, and estimated completion time
- add preview warnings for long forms, no questions, and no scored questions
- add section collapse/expand and preview filtering by section, response type, scoring behavior, and search text
- clarify that campaign-specific question selection will be handled during campaign setup
- update HR 360 feedback navigation to use sub-pages instead of top-tab form workflow